# icalendar-leave-optimiser

./: .gitignore  .pre-commit-config.yaml  .prettierignore  404.html  CNAME  Cargo.toml  README.md  config.toml  flake.nix  index.html  mkdocs.yml  netlify.toml  pyproject.toml  sitemap.xml
.devcontainer/: Containerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: default.md
.github/workflows/: deploy-mkdocs.yml  poetry-update.yml
adr/: index.html
adr/0000-record-architecture-decisions/: index.html
adr/0001-use-markdown-architectural-decision-records/: index.html
adr/template/: index.html
content/: _index.md
content/docs/: _index.md  introduction.md  quick-start.md
docs/: index.md
docs/adr/: 0000-record-architecture-decisions.md  0001-record-architecture-decisions.md  0001-use-markdown-architectural-decision-records.md
search/: search_index.json
src/: cal_opt.rs  data_transforms.rs  demo.rs  error.rs  logic.rs  main.rs  procedure.rs
src/cal_opt/: __init__.py  __main__.py  main.py  traits.rs
src/data_transforms/: hol_cal.rs  init_cal.rs  math_cal.rs  simp_event.rs
src/logic/: mod.rs
src/math_cal/: mod.rs
src/tests/: mod.rs
tests/: __init__.py  main_test.py
