[package]
name = "icalendar-leave-optimiser"
version = "0.1.0"
edition = "2021"
authors = [ "Ariel Richtman <ariel@richtman.com.au>" ]
description = "Calendar optimiser"
rust-version = "1.80.0"
documentation = "https://icalendar-leave-optimiser.richtman.com.au/docs"
homepage = "https://icalendar-leave-optimiser.richtman.com.au"
repository = "https://github.com/arichtman/icalendar-leave-optimiser"
license = "GPL-3.0-or-later"
readme = "README.md"
publish = false
keywords = ["calendar", "leave", "holiday", "optimization"]
categories = [
    "command-line-utilities"
]

[dependencies]
chrono = "^0.4.0"
time = "^0.3.0"
log = "^0.4.17"
simple_logger = "^5.0.0"
rand = "0.8.5"

[dependencies.clap]
version = "^4.0.0"
features = ["derive"]

[dependencies.icalendar]
version = "^0.13.0"
features = ["parser"]

[[bin]]
name = "icalendar-leave-optimiser"
path = "src/main.rs"
