[package]
name = "icalendar-leave-optimiser"
version = "0.1.0"
edition = "2021"
authors = [ "Ariel Richtman <ariel@richtman.com.au>" ]
description = "Calendar optimiser"
rust-version = "1.80.0"
documentation = "https://icalendar-leave-optimiser.richtman.com.au/docs"
homepage = "https://icalendar-leave-optimiser.richtman.com.au"
repository = "https://github.com/arichtman/icalendar-leave-optimiser"
license = "GPL-3.0-or-later"
readme = "README.md"
publish = false
keywords = ["calendar", "leave", "holiday", "optimization"]
categories = [
    "command-line-utilities"
]

[dependencies]
chrono = "^0.4.38"
time = "^0.3.36"
log = "^0.4.22"
simple_logger = "^5.0.0"
rand = "^0.8.5"
thiserror = "2.0.1"
derive_more = { version = "1.0.0", features = ["display", "from"] }

[dependencies.clap]
version = "^4.5.20"
features = ["derive"]

[dependencies.icalendar]
version = "^0.16.9"
# path = "../icalendar-rs"
git = "https://github.com/arichtman/icalendar-rs.git"
branch = "naivedate-conversion"
features = ["parser"]

[[bin]]
name = "icalendar-leave-optimiser"
path = "src/main.rs"
